made the loading text larger and ensured there is no exposed white space by setting the margin to 25% for the size of the parent container on all 4 sides

--- a/src/pages/experience/Experience.module.css
+++ b/src/pages/experience/Experience.module.css
@@ -7,3 +7,9 @@
     padding: 20px;
     background-color: #00b894;
 }
+
+.loading {
+    text-align: center;
+    margin: 25%;
+    font-size: 2rem;
+}
